--- a/demo/src/main/resources/templates/html/sobrenos.html
+++ b/demo/src/main/resources/templates/html/sobrenos.html
@@ -1,66 +1,74 @@
 <!DOCTYPR html>
 
-   <html>
-   <!-- Este é um comentario no html fora do body -->
+  <html>
+  <!-- Este é um comentario no html fora do body -->
 
-   <head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <title>Sobre nós</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.6/examples/album/">
+
+    <!-- Bootstrap core CSS -->
+    <link href="../bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
+  </head>
+
+  <body>
+
+    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="description" content="">
-      <title>Sobre nós</title>
-    
+      <title>Pagina Inicial</title>
+
       <link rel="canonical" href="https://getbootstrap.com/docs/4.6/examples/album/">
-    
+
       <!-- Bootstrap core CSS -->
-      <link href="../bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
+      <link href="/demo/src/main/resources/static/materialize/bootstrap-5.2.1-dist/css/bootstrap.min.css"
+        rel="stylesheet">
     </head>
 
-   <body>
-      <head>
-         <meta charset="utf-8">
-         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-         <meta name="description" content="">
-         <title>Pagina Inicial</title>
-       
-         <link rel="canonical" href="https://getbootstrap.com/docs/4.6/examples/album/">
-       
-         <!-- Bootstrap core CSS -->
-         <link href="../bootstrap-5.2.1-dist/css/bootstrap.min.css" rel="stylesheet">
-       </head>
-       <body>
-         <header class="p-3 mb-3 border-bottom">
-           <div class="container">
-             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-               <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-                 <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-                   <use xlink:href="#bootstrap" />
-                 </svg>
-               </a>
-       
-               <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                 <li><a href="../html/paginainicial.html" class="nav-link px-2 link-dark">Home</a></li>
-                 <li><a href="../html/sobrenos.html" class="nav-link px-2 link-dark">Sobre Nós</a></li>
-                 <li><a href="#" class="nav-link px-2 link-dark">Parceiros</a></li>
-               </ul>
-       
-               <div class="dropdown">
-                 <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                   Login
-                 </button>
-                 <ul class="dropdown-menu">
-                   <li><a class="dropdown-item" href="#">Parceiro</a></li>
-                   <li><a class="dropdown-item" href="#">Dono Pet</a></li>
-                 </ul>
-               </div>
-           </div>
-         </header>
-         <div class="container">
-            <div class="">
-            <h2>PET Hoteis</h2>
-         </div>
-         <div>
-            <text>Uma descrição sobre o que é o site</text>
-         </div>
-         </div>
-   </body>
-   </html>
+    <body>
+      <header class="p-3 mb-3 border-bottom">
+        <div class="container">
+          <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+            </a>
+
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+              <li><a href="../html/paginainicial.html" class="nav-link px-2 link-dark">Home</a></li>
+              <li><a href="../html/sobrenos.html" class="nav-link px-2 link-dark">Sobre Nós</a></li>
+              <li><a href="#" class="nav-link px-2 link-dark">Parceiros</a></li>
+            </ul>
+
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Login
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Parceiro</a></li>
+                <li><a class="dropdown-item" href="#">Dono Pet</a></li>
+              </ul>
+            </div>
+          </div>
+      </header>
+      <div class="container">
+        <div class="row">
+        <div class="col">
+          <h2>Pet Hoteis</h2>
+          <text>Pet hoteis foi criada para facilidar a vida de mamães e papais de PET. Nós reunimos hoteis de pet,
+            oferecendo uma fonte completa de preços e disponibilidades.
+          </text>
+        </div>
+        <div class="col">
+          <img src="/demo/src/main/resources/static/imagens/5516806-removebg-preview.png">
+        </div>
+      </div>
+      </div>
+      </div>
+    </body>
+
+  </html>
