--- a/demo/src/main/resources/templates/html/paginainicial.html
+++ b/demo/src/main/resources/templates/html/paginainicial.html
@@ -44,8 +44,11 @@
   </header>
 
   <div class="container">
-    <div class="row">
-    <form method="post" th:action="pesquisar-servico" th:object="${servicos}" class="needs-validation" novalidate>
+    <form class="row" method="post" th:action="pesquisar-servico" th:object="${servicos}">
+      <div class="col">
+        <label for="endereco" class="form-label">Cidade</label>
+        <input type="text" class="form-control" id="cidade" placeholder="Digite a cidade">
+      </div>
       <div class="col">
         <label for="endereco" class="form-label">Endereço</label>
         <input type="text" class="form-control" id="endereco" placeholder="Digite o endereço">
@@ -66,10 +69,9 @@
         <input type="checkbox" th:field="*{dom}">
         <label class="form-label">Dom</label>
       </div>
-      <div class="col"><br>
+      <div class="col">
         <button class="btn btn-primary" type="submit">Pesquisar</button>
       </div>
-    </div>
     </form>
   </div>
 </body>
