--- a/demo/src/main/resources/templates/html/sobrenos.html
+++ b/demo/src/main/resources/templates/html/sobrenos.html
@@ -56,7 +56,7 @@
           </div>
       </header>
       <div class="container">
-        <div class="row">
+        <div class="row align-items-center">
         <div class="col">
           <h2>Pet Hoteis</h2>
           <text>Pet hoteis foi criada para facilidar a vida de mamães e papais de PET. Nós reunimos hoteis de pet,
@@ -64,7 +64,7 @@
           </text>
         </div>
         <div class="col">
-          <img src="/demo/src/main/resources/static/imagens/5516806-removebg-preview.png">
+          <img src="/demo/src/main/resources/static/imagens/5516806-removebg-preview.png" class="img-fluid">
         </div>
       </div>
       </div>
